--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,6 +54,23 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+body {
+  margin: 0;
+  background: linear-gradient(180deg, rgb(117, 81, 194), rgb(255, 255, 255));
+  display: flex;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  height: 100vh;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
 a {
   color: inherit;
   text-decoration: none;
